test/corpus/basics.txt
================================================================================
Line comment (//)
================================================================================

// This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Line comment (REM)
================================================================================

REM This is a REM comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
REM block
================================================================================

REM_BLOCK
  This is inside
  a block comment
END_REM

--------------------------------------------------------------------------------

(source_file
  (rem_block
    (block_keyword)
    (block_body)
    (block_keyword)))

================================================================================
STRING command
================================================================================

STRING Hello, world!

--------------------------------------------------------------------------------

(source_file
  (string_command
    (string_keyword)
    (string_text)))

================================================================================
STRINGLN command
================================================================================

STRINGLN Hello, world!

--------------------------------------------------------------------------------

(source_file
  (string_command
    (string_keyword)
    (string_text)))

================================================================================
STRING with interpolation
================================================================================

STRING Value is $foo

--------------------------------------------------------------------------------

(source_file
  (string_command
    (string_keyword)
    (string_text)
    (interpolation
      (interpolation_sigil)
      (identifier))))

================================================================================
STRING with format specifier
================================================================================

STRING Hex: $val%x

--------------------------------------------------------------------------------

(source_file
  (string_command
    (string_keyword)
    (string_text)
    (interpolation
      (interpolation_sigil)
      (identifier)
      (format_sigil)
      (format_type))))

================================================================================
STRING with format width and type
================================================================================

STRING Padded: $val%10d

--------------------------------------------------------------------------------

(source_file
  (string_command
    (string_keyword)
    (string_text)
    (interpolation
      (interpolation_sigil)
      (identifier)
      (format_sigil)
      (format_width)
      (format_type))))

================================================================================
STRING_BLOCK
================================================================================

STRING_BLOCK
line one
line two
END_STRING

--------------------------------------------------------------------------------

(source_file
  (string_block
    (string_block_keyword)
    (block_body)
    (string_block_keyword)))

================================================================================
STRINGLN_BLOCK
================================================================================

STRINGLN_BLOCK
line one
line two
END_STRINGLN

--------------------------------------------------------------------------------

(source_file
  (string_block
    (string_block_keyword)
    (block_body)
    (string_block_keyword)))

================================================================================
DELAY command
================================================================================

DELAY 1000

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)))

================================================================================
DEFAULTDELAY command
================================================================================

DEFAULTDELAY 50

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)))

================================================================================
REPEAT command
================================================================================

REPEAT 5

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)))

================================================================================
Single key press
================================================================================

ENTER

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)))

================================================================================
Multi-key combo
================================================================================

CTRL ALT DELETE

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)
    (key)
    (key)))

================================================================================
WINDOWS shortcut
================================================================================

WINDOWS r

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)
    (identifier)))

================================================================================
Function key
================================================================================

F5

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)))

================================================================================
Media key
================================================================================

MK_VOLUP

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)))

================================================================================
Numpad key
================================================================================

KP_ENTER

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)))

================================================================================
KEYDOWN command
================================================================================

KEYDOWN ALT

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (key)))

================================================================================
KEYUP command
================================================================================

KEYUP ALT

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (key)))

================================================================================
MOUSE_MOVE command
================================================================================

MOUSE_MOVE 10 -5

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)
    (unary_expression
      (number))))

================================================================================
MOUSE_SCROLL command
================================================================================

MOUSE_SCROLL 0 3

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)
    (number)))

================================================================================
Mouse button click
================================================================================

LMOUSE

--------------------------------------------------------------------------------

(source_file
  (key_press
    (key)))

================================================================================
SWC_SET command
================================================================================

SWC_SET 1 255 0 128

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)
    (number)
    (number)
    (number)))

================================================================================
SWC_FILL command
================================================================================

SWC_FILL 0 255 0

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)
    (number)
    (number)))

================================================================================
SWC_RESET command
================================================================================

SWC_RESET 0

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)))

================================================================================
OLED_CURSOR command
================================================================================

OLED_CURSOR 0 0

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)
    (number)
    (number)))

================================================================================
OLED_CLEAR command
================================================================================

OLED_CLEAR

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)))

================================================================================
OLED_PRINT command
================================================================================

OLED_PRINT Hello OLED

--------------------------------------------------------------------------------

(source_file
  (oled_print_command
    (oled_print_keyword)
    (string_text)))

================================================================================
OLED_CPRINT command
================================================================================

OLED_CPRINT Centered text

--------------------------------------------------------------------------------

(source_file
  (oled_print_command
    (oled_print_keyword)
    (string_text)))

================================================================================
OLED_PRINT with interpolation
================================================================================

OLED_PRINT Count: $counter

--------------------------------------------------------------------------------

(source_file
  (oled_print_command
    (oled_print_keyword)
    (string_text)
    (interpolation
      (interpolation_sigil)
      (identifier))))

================================================================================
OLED_UPDATE command
================================================================================

OLED_UPDATE

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)))

================================================================================
OLED_RESTORE command
================================================================================

OLED_RESTORE

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)))

================================================================================
PREV_PROFILE command
================================================================================

PREV_PROFILE

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)))

================================================================================
NEXT_PROFILE command
================================================================================

NEXT_PROFILE

--------------------------------------------------------------------------------

(source_file
  (command
    (command_keyword)))

================================================================================
GOTO_PROFILE command
================================================================================

GOTO_PROFILE NumPad

--------------------------------------------------------------------------------

(source_file
  (goto_profile_command
    (profile_keyword)
    (string_text)))

================================================================================
GOTO_PROFILE with interpolation
================================================================================

GOTO_PROFILE Profile$num

--------------------------------------------------------------------------------

(source_file
  (goto_profile_command
    (profile_keyword)
    (string_text)
    (interpolation
      (interpolation_sigil)
      (identifier))))

================================================================================
DEFINE declaration
================================================================================

DEFINE MY_CONST 42

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (constant)))

================================================================================
VAR declaration
================================================================================

VAR spam = 42

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (number)))

================================================================================
VAR declaration hex
================================================================================

VAR eggs = 0xff

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (number)))

================================================================================
VAR declaration without initializer
================================================================================

VAR counter

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)))

================================================================================
Simple assignment
================================================================================

spam = 20

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Compound assignment +=
================================================================================

spam += 1

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Compound assignment -=
================================================================================

spam -= 5

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Compound assignment *=
================================================================================

spam *= 2

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Compound assignment /=
================================================================================

spam /= 4

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Arithmetic expression in assignment
================================================================================

result = 2 + 3

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (number)
      (number))))

================================================================================
Multiply expression
================================================================================

result = eggs * 10

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Exponent expression
================================================================================

result = 2 ** 8

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (number)
      (number))))

================================================================================
Comparison expression ==
================================================================================

result = x == 0

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Comparison expression !=
================================================================================

result = x != 0

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Comparison expression >=
================================================================================

result = x >= 10

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Logical AND expression
================================================================================

result = a && b

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Logical OR expression
================================================================================

result = a || b

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Logical NOT expression
================================================================================

result = !flag

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (unary_expression
      (identifier))))

================================================================================
Bitwise AND expression
================================================================================

result = x & 0xFF

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Bitwise OR expression
================================================================================

result = x | 0x01

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Bitwise XOR expression
================================================================================

result = x ^ mask

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Bitwise NOT expression
================================================================================

result = ~x

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (unary_expression
      (identifier))))

================================================================================
Left shift expression
================================================================================

result = x << 2

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Right shift expression
================================================================================

result = x >> 1

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (binary_expression
      (identifier)
      (number))))

================================================================================
Hexadecimal number
================================================================================

VAR h = 0xDEAD

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (number)))

================================================================================
Reserved variable read
================================================================================

VAR t = _TIME_MS

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (reserved_variable)))

================================================================================
Reserved variable write
================================================================================

_CHARJITTER = 10

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (assignment_operator)
    (number)))

================================================================================
Global variable _GV0
================================================================================

VAR saved = _GV0

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (reserved_variable)))

================================================================================
LOOP label
================================================================================

LOOP0:

--------------------------------------------------------------------------------

(source_file
  (loop_label))

================================================================================
LOOP label with body
================================================================================

LOOP0:
STRINGLN first action

LOOP1:
STRINGLN second action

--------------------------------------------------------------------------------

(source_file
  (loop_label)
  (string_command
    (string_keyword)
    (string_text))
  (loop_label)
  (string_command
    (string_keyword)
    (string_text)))

================================================================================
IF statement
================================================================================

IF x == 0
DELAY 100
END_IF

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_clause
      (keyword)
      (binary_expression
        (identifier)
        (number)))
    (block_body
      (command
        (command_keyword)
        (number)))
    (end_keyword)))

================================================================================
IF / ELSE statement
================================================================================

IF x > 0
DELAY 100
ELSE
DELAY 200
END_IF

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_clause
      (keyword)
      (binary_expression
        (identifier)
        (number)))
    (block_body
      (command
        (command_keyword)
        (number)))
    (else_clause
      (keyword)
      (block_body
        (command
          (command_keyword)
          (number))))
    (end_keyword)))

================================================================================
IF / ELSE IF / ELSE statement
================================================================================

IF x == 1
DELAY 100
ELSE IF x == 2
DELAY 200
ELSE
DELAY 300
END_IF

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (if_clause
      (keyword)
      (binary_expression
        (identifier)
        (number)))
    (block_body
      (command
        (command_keyword)
        (number)))
    (else_if_clause
      (keyword)
      (binary_expression
        (identifier)
        (number))
      (block_body
        (command
          (command_keyword)
          (number))))
    (else_clause
      (keyword)
      (block_body
        (command
          (command_keyword)
          (number))))
    (end_keyword)))

================================================================================
WHILE loop
================================================================================

WHILE x > 0
DELAY 50
x -= 1
END_WHILE

--------------------------------------------------------------------------------

(source_file
  (while_statement
    (keyword)
    (binary_expression
      (identifier)
      (number))
    (block_body
      (command
        (command_keyword)
        (number))
      (assignment
        (identifier)
        (assignment_operator)
        (number)))
    (end_keyword)))

================================================================================
WHILE with LBREAK
================================================================================

WHILE 1
DELAY 10
LBREAK
END_WHILE

--------------------------------------------------------------------------------

(source_file
  (while_statement
    (keyword)
    (number)
    (block_body
      (command
        (command_keyword)
        (number))
      (break_statement
        (keyword)))
    (end_keyword)))

================================================================================
WHILE with CONTINUE
================================================================================

WHILE 1
CONTINUE
END_WHILE

--------------------------------------------------------------------------------

(source_file
  (while_statement
    (keyword)
    (number)
    (block_body
      (continue_statement
        (keyword)))
    (end_keyword)))

================================================================================
Function definition (FUN)
================================================================================

FUN myFunc()
DELAY 100
END_FUN

--------------------------------------------------------------------------------

(source_file
  (function_def
    (keyword)
    (identifier)
    (block_body
      (command
        (command_keyword)
        (number)))
    (end_keyword)))

================================================================================
Function definition (FUNCTION)
================================================================================

FUNCTION myFunc()
DELAY 100
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (function_def
    (keyword)
    (identifier)
    (block_body
      (command
        (command_keyword)
        (number)))
    (end_keyword)))

================================================================================
Function with parameters
================================================================================

FUN add(a, b)
RETURN a + b
END_FUN

--------------------------------------------------------------------------------

(source_file
  (function_def
    (keyword)
    (identifier)
    (param_list
      (identifier)
      (identifier))
    (block_body
      (return_statement
        (keyword)
        (binary_expression
          (identifier)
          (identifier))))
    (end_keyword)))

================================================================================
Function call in expression
================================================================================

VAR r = ULT(x, y)

--------------------------------------------------------------------------------

(source_file
  (declaration
    (keyword)
    (identifier)
    (function_call
      (command_keyword)
      (argument_list
        (identifier)
        (identifier)))))

================================================================================
Function call statement
================================================================================

myFunc()

--------------------------------------------------------------------------------

(source_file
  (function_call_statement
    (identifier)))

================================================================================
Function call with arguments
================================================================================

myFunc(1, 2)

--------------------------------------------------------------------------------

(source_file
